made changes accrding to findbugs results